src/objects/Benefits_Realization__c.object
<CustomObject>
    <description>This object is used to support the Project object; it allows users to associate Benefits within Projects.</description>
    <fields>
        <fullName>Benefit_Measure__c</fullName>
        <label>Benefit Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Benefit Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Benefits Realizations</relationshipLabel>
        <relationshipName>Benefits_Realizations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_or_Change_Title__c</fullName>
        <label>Benefit or Change Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_or_Change__c</fullName>
        <label>Benefit or Change?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefits_Realization_Project__c</fullName>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipLabel>Benefits Realizations</relationshipLabel>
        <relationshipName>Benefits_Realizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Realized__c</fullName>
        <label>Date Realized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exposure__c</fullName>
        <label>Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Profile (e.g., government-wide impact)</fullName>
                </value>
                <value>
                    <fullName>Medium Profile (e.g., GSA-wide impact)</fullName>
                </value>
                <value>
                    <fullName>Low Profile (e.g., portfolio specific impact)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Realization_or_Change_Mgmt_Approach__c</fullName>
        <label>Realization or Change Mgmt Approach</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed / Realized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Type: Financial</fullName>
                </value>
                <value>
                    <fullName>Benefit Type: Nonfinancial</fullName>
                </value>
                <value>
                    <fullName>Benefit Type: Tangible</fullName>
                </value>
                <value>
                    <fullName>Benefit Type: Intangible</fullName>
                </value>
                <value>
                    <fullName>Change Type: IT Enabling Change</fullName>
                </value>
                <value>
                    <fullName>Change Type: Process Enabling Change</fullName>
                </value>
                <value>
                    <fullName>Change Type: Organization Enabling Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Benefits Realization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BR-{000000000}</displayFormat>
        <label>Benefits Realization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits Realizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Realized_later_than_Target_Date</fullName>
        <active>true</active>
        <description>Date Realized must be greater than Target Date</description>
        <errorConditionFormula>Date_Realized__c &lt; Target_Date__c</errorConditionFormula>
        <errorMessage>Date Realized must be later than the Target Date</errorMessage>
    </validationRules>
</CustomObject>